--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.4.0
   fluttertoast: ^8.2.10
   google_sign_in: ^6.2.2
+  firebase_database: ^11.3.0
+  cloud_firestore: ^5.6.1
 
 dev_dependencies:
   flutter_test:
